# cl_auto

./: .gitignore  Pipfile  README.md  cl_auto.py  copy.txt  og_copy.txt  pyproject.toml
docker/: Dockerfile
terraform/: main.tf
